--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="./js/Tower.js"></script>
     <script src="./js/Cannon.js"></script>
     <script src="./js/CannonBall.js"></script>
+    <script src="./js/boat.js"></script>
    
   </head>
   <body>
